syntax = "proto3";

// Request message (Empty)
import "google/protobuf/empty.proto";

service AirQuality {
    rpc StreamAirQuality(google.protobuf.Empty) returns (stream AirQualityData) {}
}

// Response message (AirQualityData)
message AirQualityData {
    float co2Level = 1; // Carbon dioxide level
    float no2Level = 2; // Nitrogen dioxide level
    float so2Level = 3; // Sulfur dioxide level
    float humidity = 4; // Relative humidity in percentage
}
